--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         console.log("Keyboard icons created by Flat Icons - Flaticon: https://www.flaticon.com/free-icons/keyboard");
     </script>
     <link rel="stylesheet" href="./styles/style.css">
-    <title>DPT</title>
+    <title id="title">DPT</title>
 </head>
 <body>
 
