--- a/pages/login.html
+++ b/pages/login.html
@@ -22,6 +22,7 @@
         <div id="formContainer"></div>
     -->
 
+    <script type="module" src="../scripts/firebase.js"></script>
     <script type="module" src="../scripts/header.js"></script>
     <script type="module" src="../scripts/login.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
