--- a/pages/login.html
+++ b/pages/login.html
@@ -22,6 +22,8 @@
         <div id="formContainer"></div>
     -->
 
+    <div id="main-container"></div>
+
     <script type="module" src="../scripts/firebase.js"></script>
     <script type="module" src="../scripts/header.js"></script>
     <script type="module" src="../scripts/login.js"></script>
