--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     
     <script type="module" src="./scripts/header.js"></script>
     <script type="module" src="./scripts/app.js"></script>
+    <script type="module" src="./scripts/firebase.js"></script>
     <script type="module" src="./scripts/virtualKeyboard.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
